# STATS402_course_project

./: .gitignore  .gitmodules  README.md  final_report.tex  milestone2.tex  milestone3.tex  proposal.tex  proposal_pre.md  references.bib
battlesnake/: Cargo.toml  README.md
battlesnake/src/: info.rs  lib.rs  logic.rs  main.rs  model.rs  serve.rs
battlesnake/src/logic/: search_tree.rs
battlesnake_train/: .gitignore  README.md  bench.sh  pyproject.toml
battlesnake_train/battlesnake_gym/: Cargo.toml  pyproject.toml
battlesnake_train/battlesnake_gym/python/battlesnake_gym/: __init__.py
battlesnake_train/battlesnake_gym/python/tests/: test_gym.py
battlesnake_train/battlesnake_gym/src/: lib.rs  observations.rs  tests.rs
battlesnake_train/snork_snakes_binding/: Cargo.toml  pyproject.toml
battlesnake_train/snork_snakes_binding/python/snork_snakes_binding/: __init__.py
battlesnake_train/snork_snakes_binding/src/: lib.rs
battlesnake_train/src/battlesnake_train/: __init__.py  bench.py  buf.py  disk.py  dummy.py  feature.py  gym.py  ppo.py  progress.py
battlesnake_train/src/battlesnake_train/scripts/: simulation2v2.py  simulation_2model_v2_tree.py  simulation_model2v2.py  train_deep_mlp.py  train_mlp.py  train_vgg.py  train_vit.py  train_vit_big.py  train_vit_large.py  train_vit_tiny.py
