[package]
name = "battlesnake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
axum = "0.7"
battlesnake_gym = { version = "0.1", path = "../battlesnake_train/battlesnake_gym" }
futures = "0.3.30"
itertools = "0.12.1"
numpy = "0.21.0"
par-stream = { version = "0.10.2", features = ["runtime-tokio"] }
pyo3 = "0.21.2"
serde = "1.0.197"
shame = "0.0.1"
snork_engine = { version = "0.1.0", path = "../snork/snork_engine" }
tinyvec = "1.6.0"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio_gen_server = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
