[project]
name = "battlesnake-train"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Steven Hé (Sīchàng)", email = "sichang.he@dukekunshan.edu.cn" },
]
dependencies = [
    "gymnasium>=0.29.1",
    "stable-baselines3>=2.3.0",
    "torchvision>=0.18.0",
    "setuptools>=69.5.1",
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.23.0",
    "pytest>=8.1.1",
    "tqdm>=4.66.2",
    "rich>=13.7.1",
    "scalene>=1.5.40",
]

[tool.rye.workspace]
members = [".", "battlesnake_gym", "snork_snakes_binding"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/battlesnake_train"]
