[package]
name = "battlesnake-gym"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "battlesnake_gym"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.12.1"
numpy = "0.21.0"
pyo3 = "0.21"
rand = "0.8"
snork = { version = "0.2", path = "../../snork" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
debug = true
opt-level = 2
