[package]
name = "battlesnake-gym"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "battlesnake_gym"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3"
itertools = "0.12.1"
numpy = "0.21.0"
pyo3 = { version = "0.21", features = ["serde"] }
rand = "*"
rand_chacha = { version = "0.3.1", features = ["serde", "serde1"] }
serde = { version = "1.0.198", features = ["derive"] }
snork_engine = { version = "0.1", path = "../../snork/snork_engine" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
debug = true
opt-level = 2
