[project]
name = "battlesnake_gym"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Steven Hé (Sīchàng)", email = "sichang.he@dukekunshan.edu.cn" },
]
dependencies = ["supersuit>=3.7.0", "pettingzoo>=1.24.3", "pygame>=2.5.2"]
requires-python = ">=3.11,<3.12"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true

[tool.maturin]
python-source = "python"
module-name = "battlesnake_gym._lowlevel"
features = ["pyo3/extension-module"]
