[project]
name = "snork-snakes-binding"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Steven Hé (Sīchàng)", email = "sichang.he@dukekunshan.edu.cn" }
]
dependencies = []
requires-python = ">= 3.11"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = []

[tool.maturin]
python-source = "python"
module-name = "snork_snakes_binding._lowlevel"
features = ["pyo3/extension-module"]